--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Special+Gothic+Expanded+One&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -11,9 +11,9 @@
 }
 
 body {
-  font-family: 'Inter', sans-serif;
+  font-family: 'poppins-bold';
   line-height: 1.6;
-  color: #333;
+  color: #6FA088;
   overflow-x: hidden;
 }
 
@@ -31,10 +31,10 @@ html {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(135deg, #A66CF5, #F571E2);
+  background: linear-gradient(135deg, #000000, #0f1110);
   border-radius: 4px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: linear-gradient(135deg, #796CF5, #D36CF5);
+  background: linear-gradient(135deg, #6FA088, #ADC9B8);
 }
